Added starter game server implementation, proof of concept client most of the basic communication infrastructure is working. You can mostly just test ping and see that connection works.